<resources>
    <string name="app_name">Baby Care</string>
    <string name="CHAT_BOT">Baby care chatbot</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="btn_welcom">Welcome</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Log In</string>
    <string name="baby_information">Baby Information</string>
    <string name="logo">logo</string>
    <string name="Weight">Weight</string>
    <string name="todo">TODO</string>
    <string name="length">Length</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="this_is_second_activity">This is Second activity</string>
    <string name="baby_care">Baby Care</string>
    <string-array name="genderlist">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Doctor">
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="DoctorName">
        <item>Ahmed Hawam</item>
        <item>Asmaa Ibrahim</item>
        <item>Diaa Magdy</item>
        <item>Mariam Eldoweny</item>
        <item>Nada Makram</item>
    </string-array>
    <string-array name="MoreDescription">
        <item>Mahllet Ziad , Mahallah .</item>
        <item>Batra , Mansoura .</item>
        <item>Gehan , Mansoura .</item>
        <item>Damietta , Damietta .</item>
        <item>Talkha , Mansoura .</item>
    </string-array>
    <string name="Baby_sitter">BabySitter</string>
    <string name="Parent">Parent</string>
    <string name="invalide_name">Name is required</string>
    <string name="invalide_email">Please Enter Valid Email</string>
    <string name="invalide_password">Enter 6 digit password</string>
    <string name="user_information">User Information</string>
    <string name="StatusCry">Your baby is hungry</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sound_recording_example2">SoundRecordingExample2</string>
    <string name="app_info">This is a sample application to record audio.nnTo start recording press &quot;Record&quot; button, to stop recording press &quot;Stop&quot; button.</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string-array name="numofRequest">
        <item>Request 1</item>
        <item>Request 2</item>
        <item>Request 3</item>
        <item>Request 4</item>
        <item>Request 5</item>
    </string-array>
    <string name="title_activity_add__doctor">Add_Doctor</string>
    <string name="Rate">Rate</string>
    <string name="Specialty">Specialty</string>
    <string name="salary">Salary</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>
    <string name="BabyName">AHMED</string>
    <string name="NameOfVaccination">Vaccination1</string>
    <string name="TypeOfVaccination">Measles vaccine.</string>
    <string name="Date">15May</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="dialog_message">Are you sure you want to delete this image?</string>
    <string name="dialog_title">Warning</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string-array name="nutsTypes">

        
        
        
        

    </string-array>
    <string-array name="period1">
        <item>Pregnancy</item>
        <item>Pregnancy</item>
        <item>Pregnancy</item>
        <item>Pregnancy</item>

    </string-array>
    <string-array name="period2">
        <item>Afterbirth</item>
        <item>Afterbirth</item>
        <item>Afterbirth</item>
        <item>Afterbirth</item>
    </string-array>
    <string-array name="period3">
        <item>Breastfeeding</item>
        <item>Breastfeeding</item>
        <item>Breastfeeding</item>
        <item>Breastfeeding</item>
    </string-array>
    <string-array name="period4">
        <item>Baby</item>
        <item>Baby</item>
        <item>Baby</item>
        <item>Baby</item>
    </string-array>
    <string name="BabySitter">BabySitter</string>
    <string name="Salary">2500 EG</string>
    <string name="salaryperhour">2500 EG / Hour</string>
    <string name="Continue">Continue to Order details</string>
    <string name="Continue1">Continue</string>
    <string name="Question1">How many children will attend ?</string>
    <string name="Child1">Child 1</string>
    <string name="Child2">Child 2</string>
    <string name="Child3">Child 3</string>
    <string name="Child4">Child 4</string>
    <string name="Question2">How many sessions per week ?</string>
    <string name="Question3">How many Hours per session ?</string>
    <string name="Question4">For how many weeks ?</string>
    <string name="Question5">When do you want to start ?</string>
    <string name="Question6">What is your address in detail ?</string>
    <string name="RequestSummary">Request Summary</string>
    <string name="Children">Children</string>
    <string name="child1">1 Child</string>
    <string name="Totalhours">Total hours</string>
    <string name="numofhours">45 hours</string>
    <string name="estimatedcost">Estimated cost</string>
    <string name="country">Damietta</string>
    <string name="sendrequest">Send a request</string>
    <string name="Expectedprice">Expected price</string>
    <string name="invalid_address">please Enter your address</string>
    <string name="invalid_note">Leave your note please</string>
    <string name="BabySitterInfo">Baby Sitter information</string>
    <string name="age">Age</string>
    <string name="Sallary">Salary</string>
    <string name="Phonenumber">Phone number</string>
    <string name="slogan">Slogan</string>
    <string name="Area">Area</string>
    <string name="Description">Description</string>
    <string name="Requests">Requests</string>
    <string name="Name">Name</string>
    <string name="MoreDetailesAboutHours">3 hours/sessions,5 sessions/week</string>
    <string name="MoreDetailesAboutHours1">3 week long</string>
    <string name="Reject">Reject Request</string>
    <string name="Accept">Accept Request</string>
    <string name="internet_connection_not_available">No internet connection.</string>
    <string name="you_need_network_access_for_delete">You need to have network access for deleting conversation.</string>
    <string name="applozic_server_error">Oops! You caught an error, try again later.</string>
    <string name="you_need_network_access_for_block_or_unblock">You need to have network access for block/unblock a user.</string>
    <string name="internet_connection_for_group_name_info">Your phone needs an internet connection to change the group name.</string>
    <string name="you_dont_have_any_network_access_info">You don\'t have any network access now.</string>
    <string name="failed_to_leave_group">Failed to leave group.</string>
    <string name="user_is_already_exists">User already exists in group.</string>
    <string name="delete_conversation_failed">Delete failed.</string>
    <string name="menu_search">Search</string>
    <string name="faq_option">FAQ</string>
    <string name="menu_add_contact">Create a new contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Search..</string>
    <string name="activity_contacts_list">MobiTexter</string>
    <string name="activity_contacts_title">Select contact</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contact search for \"%s\"</string>
    <string name="contactsListActivity">Contact List</string>
</resources>